--- a/index.html
+++ b/index.html
@@ -6,44 +6,27 @@
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style type="text/css">
-    body {
-        background-color: #000000 ;
-        margin: 0;
-        padding: 0;
-        font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-        
-    }
-    div {
-        width: 600px;
-        margin: 5em auto;
-        padding: 50px;
-        background-color: #fff;
-        border-radius: 1em;
-    }
-    a:link, a:visited {
-        color: #38488f;
-        text-decoration: none;
-    }
-    @media (max-width: 700px) {
-        body {
-            background-color: #fff;
-        }
-        div {
-            width: auto;
-            margin: 0 auto;
-            border-radius: 0;
-            padding: 1em;
-        }
-    }
-    </style>    
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>    
 </head>
-
 <body>
-<div>
-    <h1>Example Domain</h1>
-    <p>S1mple safe.</p>
-    <p><a href="http://www.iana.org/domains/example">Here is nothing to see go away</a></p>
+
+<div id="app">
+  {{ message }}
 </div>
+
+
+
+<script type="text/javascript">
+
+var app = new Vue({
+	  el: '#app',
+	  data: {
+	    message: 'Hello PewDiePie!'
+	  }
+	})
+	
+	app.message = "mittagspause" 
+</script>
+
 </body>
 </html>
