Project for HLTV

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 { title: 'Bets', icon: 'attach_money' },
                 { title: 'Events', icon: 'supervisor_account' },
                 { title: 'Live', icon: 'play_arrow' },
-                { title: 'Ranking', icon: 'swap_vert' },
+                { title: 'Rankin', icon: 'swap_vert' },
               ],
               mini: false,
               right: null,
