--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </v-card-title>
 
         <v-card-actions>
-          <v-btn flat v-bind:href="item.link" color="orange">More Infos</v-btn>
+          <v-btn flat v-bind:href="item.link" fixed="false" color="blue">More Infos</v-btn>
         </v-card-actions>
       </v-card>
     </v-flex>
