--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
   <link href="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.min.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  
+  
+
+<link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+<link rel="manifest" href="icons/site.webmanifest">
+<link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="icons/favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-config" content="icons/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
+<meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0, user-scalable = no">
+
+  
+  
 </head>
 <body>
   <div id="app" class="theme--light, light-red ">
@@ -21,9 +37,7 @@
 		      <v-icon>search</v-icon>
 		    </v-btn>
 		
-		    <v-btn icon>
-		      <v-icon>apps</v-icon>
-		    </v-btn>
+		  
 		
 		    <v-btn icon>
 		      <v-icon>refresh</v-icon>
@@ -39,9 +53,9 @@
     style="height: 200px;"
   >
 
-   <v-layout>
+   <v-layout style="margin-top: 50px;">
     <v-flex xs12 sm6 offset-sm3>
-      <v-card  v-for="item in feed.items">
+      <v-card  v-for="item in feed.items">									
         <v-img
           v-bind:src="item.imageUrl"
           aspect-ratio="2.75"
@@ -57,6 +71,7 @@
         <v-card-actions>
         <v-btn block color="blue" dark>More infos</v-btn>        
         </v-card-actions>
+        
       </v-card>
     </v-flex>
   </v-layout>
